@@ -1,5 +1,9 @@
 2008-06-28  Laurent Debacker <debackerl@gmail.com> 
 
+	* ApplicationMenu.cs: Working menu opening
+
+2008-06-28  Laurent Debacker <debackerl@gmail.com> 
+
 	* Theme.cs: First steps for the app menu theme
 	* ApplicationMenuItem.cs: Better handling of fast moving pointers
 	* ApplicationMenu.cs: Bugfixes
